--- a/spec/v1.4.md
+++ b/spec/v1.4.md
@@ -3,3 +3,5 @@
 **Date:** August 31, 2025  
 **Scope:** This document supersedes v1.3. It finalizes schema, constraints, views, stored procedures, masking rules, and RLS behavior for a production Supabase/Postgres implementation.  
 _No SQL in this version; this is the source of truth for the forthcoming migration script._
+## 2. Timezone & Operating Window
+- All ride timestamps stored in **UTC**.  
