--- a/spec/v1.4.md
+++ b/spec/v1.4.md
@@ -3,5 +3,148 @@
 **Date:** August 31, 2025  
 **Scope:** This document supersedes v1.3. It finalizes schema, constraints, views, stored procedures, masking rules, and RLS behavior for a production Supabase/Postgres implementation.  
 _No SQL in this version; this is the source of truth for the forthcoming migration script._
+
+---
+
+## 1. Terminology & Roles
+- “Coordinator” is renamed to **Scheduler** (meaning unchanged).  
+- **Admin** and **Scheduler** accounts are created in Supabase Auth. Roles map to database roles (see §3, §10).  
+- End-users (pilots, passengers, emergency contacts) are rows in the `people` table; they do not require Supabase Auth unless they sign in.
+
+---
+
 ## 2. Timezone & Operating Window
 - All ride timestamps stored in **UTC**.  
+- Rides must fall within **07:00–20:00 America/Los_Angeles**.  
+- Creation/update attempts outside this window → `ERR_TIME_WINDOW`.  
+- DST is honored.  
+- Legacy imports may bypass rule with `legacy_import=true`.
+
+---
+
+## 3. Auth Model & Mapping
+- Supabase Auth is the source for authenticated users.  
+- `app_user_roles(user_id uuid, role_key text)` defines per-user role memberships (`admin`, `scheduler`).  
+- `is_admin_or_scheduler()` helper returns true if user has either role.  
+- All writes occur via **SECURITY DEFINER RPCs** with role re-checks.  
+- Non-admins read only via masked views.
+
+---
+
+## 4. Core Entities & Tables
+- **people:** normalized names, email, phone (US-only, 10 digits), notes, role affinity, audit fields.  
+- **locations:** name, address, optional lat/lng, unique on `(name, address)`.  
+- **rides:** `date_time` (UTC), `duration_minutes` (30–240), origin/destination, status enum, cancellation_reason, audit fields.  
+- **ride_assignments:** links people to rides (`pilot`, `passenger`). Exactly 1 pilot; ≤2 passengers.  
+- **ride_assignment_contacts:** optional passenger emergency contact, must reference an existing passenger assignment.  
+- **ride_notes:** free-text notes per ride with `author_id`; `ON DELETE RESTRICT`.  
+- **pilot_certifications:** informational only.
+
+---
+
+## 5. Business Rules & Constraints
+- Exactly 1 pilot per ride.  
+- Max 2 passengers.  
+- No person double-booked in same role (exclusion constraint).  
+- Duration 30–240 minutes.  
+- `cancellation_reason` required when status = cancelled.  
+- Contacts must reference real passengers.
+
+---
+
+## 6. Pilot Certification Policy
+- Certifications tracked (type, number, issued/expires).  
+- Informational in v1.4; may enforce in v1.5+ with admin override.
+
+---
+
+## 7. Status Enum & Transitions
+- Statuses: `tentative`, `scheduled`, `completed`, `cancelled`.  
+- Allowed: tentative→scheduled→completed; scheduled→cancelled; tentative→cancelled.  
+- Disallowed: completed→other; cancelled→other.  
+- `cancel_ride()` is canonical; internally calls `set_status(..., "cancelled")`.
+
+---
+
+## 8. Views & Masking
+- **v_people_lookup:** masked name search; trigram index.  
+- **v_rides_list:** aggregated pilot/passenger names, origin/destination.  
+- **v_ride_detail:** full UI object. PII masked for non-admins/schedulers.  
+- Masking: email → masked local + full domain; phone → last 4 digits only.
+
+---
+
+## 9. Stored Procedures (RPCs) & Error Envelope
+- All RPCs return:  
+  ```json
+  { "ok": boolean, "error": { "code": "...", "message": "...", "details": "..." } | null, "data": ... }
+  ```
+- All are SECURITY DEFINER.  
+- Examples: `create_ride`, `update_ride`, `set_status`, `assign_person`, `unassign_person`, `add_note`, `link_emergency_contact`.
+
+---
+
+## 10. Row Level Security (RLS)
+- Base tables: deny by default.  
+- Admins/Schedulers: read/write via RPCs.  
+- Non-admins: read only via masked views.  
+
+---
+
+## 11. Exclusion Constraints & Concurrency
+- **btree_gist** extension required.  
+- Exclusion constraint: `(person_id, role)` cannot overlap across rides.  
+- Passenger ≤2: enforced with unique partial index or deferred constraint.
+
+---
+
+## 12. Audit Strategy
+- `created_at`/`updated_at` via triggers.  
+- `created_by`/`updated_by` from `auth.uid()`.  
+- Full audit history may come in v1.5+.
+
+---
+
+## 13. Indexes (Mandatory)
+- rides: `(status, date_time)`, `(origin_id)`, `(destination_id)`  
+- ride_assignments: `(ride_id)`, `(person_id, role)`  
+- people: trigram gin index on full name  
+- locations: unique `(name, address)`  
+- notes: `(ride_id)`
+
+---
+
+## 14. Extensions
+- `pg_trgm` (name search)  
+- `btree_gist` (time range exclusion)
+
+---
+
+## 15. Seed Data
+- `app_user_roles`: initial admin/scheduler users.  
+- Role keys: `admin`, `scheduler`, `pilot`, `passenger`, `emergency_contact`.  
+- `pilot_certification_types`: 3–5 seed values.
+
+---
+
+## 16. Error Codes
+- `ERR_INVALID_INPUT`  
+- `ERR_TIME_WINDOW`  
+- `ERR_STATUS_TRANSITION`  
+- `ERR_DUPLICATE_ROLE`  
+- `ERR_OVERLAP`  
+- `ERR_NOT_AUTHORIZED`  
+- `ERR_NOT_FOUND`
+
+---
+
+## 17. View Schemas (High-Level)
+- **v_rides_list:** id, date_time, duration_minutes, status, origin_name, destination_name, pilot_names[], passenger_names[].  
+- **v_ride_detail:** ride fields + origin/destination objects, assignments with masking, notes[], emergency_contact per passenger.
+
+---
+
+## 18. Open Items / Future Flags
+- Phone normalization to **E.164**.  
+- Certification gating with admin override.  
+- Full audit history.
