--- a/spec/v1.4-refreshed.md
+++ b/spec/v1.4-refreshed.md
@@ -1,3 +1,53 @@
+
+# Addendum — Step 4 (DB Hardening) — Implemented September 2025
+
+This addendum records the **finalized Step 4 implementation** in v1.4 and supersedes any earlier Step‑4 notes.
+
+## What changed (DB-level)
+
+1) **`app_settings` (singleton)**  
+   - Columns: `id int default 1 check(id=1)`, `start_hour int 0–23`, `end_hour int 1–24`, `timezone text`, `created_at`, `updated_at` (+ `updated_at` trigger).  
+   - **RLS enabled**. Policy: `SELECT` for `authenticated`. (No general `INSERT/UPDATE/DELETE`; future admin UI or service role can manage.)  
+   - Seeded defaults: **07:00–20:00 America/Los_Angeles** (matches prior behavior).
+
+2) **`is_within_operating_hours(ts timestamptz)`**  
+   - Refactored to **read from `app_settings`**.  
+   - `stable`, `security definer`.  
+   - Fallback to 07:00–20:00 America/Los_Angeles if `app_settings` is not readable (defensive default).
+
+3) **Cancellation reason required when cancelled**  
+   - `rides` has a **CHECK**: `status='cancelled'` ⇒ `cancellation_reason` must be non‑empty (after trim).  
+   - RPCs (`create_ride`, `update_ride`) continue to validate and return JSON error codes; the DB check hardens raw SQL paths.
+
+4) **Max two passengers (DB constraint trigger)**  
+   - Constraint trigger `trg_ra_max_two_passengers` (deferrable) on `ride_assignments` enforces **≤ 2 passengers per ride** even if RPCs are bypassed.
+
+## Acceptance criteria
+
+- With seeded defaults, **all prior Step‑3 tests remain green**.  
+- A raw SQL update to set `status='cancelled'` with **blank/null** `cancellation_reason` **fails**.  
+- Attempting a **third** passenger via raw `INSERT` **fails**.  
+- `is_within_operating_hours()` behavior is unchanged for default hours/timezone and can be adjusted by editing `app_settings`.
+
+## Testing (single-file suite)
+
+- New consolidated test script: **`tests/v1.4-tests.sql`**.  
+  - Includes all Step‑3 cases (time window, status transition, duplicate roles, overlap, contact) **plus** Step‑4 hardening tests (DB cancel‑reason check, happy‑path cancel with reason + revert, DB passenger limit).  
+  - Run:
+    ```sql
+    \i sql/v1.4-run-all-fixed.sql
+    \i tests/v1.4-tests.sql
+    ```
+  - Emits a single result set with `PASS` booleans per test.
+
+## Operational notes / migration
+
+- Fresh installs: no action required beyond running `sql/v1.4-run-all-fixed.sql`.  
+- Existing data: if any historical rides are `cancelled` with a blank/NULL reason, **ALTER TABLE ADD CHECK** would fail; backfill a reason before enabling the check. The provided installer creates the check as part of table creation.  
+- Managing hours/timezone: keep `app_settings` restricted; updates should be performed by an admin‑only path (future Step‑5 admin UI) or a service role script.
+
+---
+
 # CWA Ride Scheduler — Database & API Specification (v1.4)
 
 **Date:** August 31, 2025  
