--- a/spec/v1.5-refreshed.md
+++ b/spec/v1.5-refreshed.md
@@ -27,7 +27,7 @@ This version builds on v1.4 (including Step‑4 DB Hardening) and **finalizes Pe
 - **Single-file test suite** `tests/v1.5-tests.sql` executes Step‑3/4 ride tests **and** new People tests (validation, normalization, uniqueness, RLS via RPC).
 
 ## Deployment
-- Fresh install: `psql -f sql/v1.5-run-all.sql`, then `psql -f tests/v1.5-tests.sql`.
+- Fresh install: `psql -f sql/v1.5.2-run-all.sql`, then `psql -f tests/v1.5-tests.sql`.
 - No migration path provided (v1.x design is reinstallable by intent).
 
 ---
@@ -69,12 +69,12 @@ This addendum records the **finalized Step 4 implementation** in v1.4 and supers
 
 ## Testing (single-file suite)
 
-- New consolidated test script: **`tests/v1.4-tests.sql`**.  
+- New consolidated test script: **`tests/v1.5-tests.sql`**.  
   - Includes all Step‑3 cases (time window, status transition, duplicate roles, overlap, contact) **plus** Step‑4 hardening tests (DB cancel‑reason check, happy‑path cancel with reason + revert, DB passenger limit).  
   - Run:
     ```sql
-    \i sql/v1.4-run-all-fixed.sql
-    \i tests/v1.4-tests.sql
+    \i sql/v1.5.2-run-all.sql
+    \i tests/v1.5-tests.sql
     ```
   - Emits a single result set with `PASS` booleans per test.
 
@@ -243,9 +243,9 @@ _No SQL in this version; this is the source of truth for the forthcoming migrati
 **Prerequisites:** Supabase SQL Editor, connected to a dev/disposable project.
 
 **Steps:**  
-1. Run `v1.4-run-all-fixed.sql` to drop/rebuild schema, install views/RLS, seed data (incl. overlap ride), and load RPCs.  
+1. Run `v1.5.2-run-all.sql` to drop/rebuild schema, install views/RLS, seed data (incl. overlap ride), and load RPCs.  
    - ⚠️ This script drops and recreates the `public` schema. Do not run on production.  
-2. Run `tests/v1.4-step3-compare-v2.overlap.sql` to validate behavior.  
+2. Run `tests/v1.5-tests.sql` to validate behavior.  
    - Output: PASS/FAIL table for time-window, status transitions, assignment rules, and emergency contact rules.  
    - All rows should have `pass = true`.  
 3. To see unmasked data in views, add your `auth.users.id` into `app_user_roles` with role `admin`.
@@ -272,10 +272,10 @@ _No SQL in this version; this is the source of truth for the forthcoming migrati
 **Rebuild + Test**  
 ```sql
 -- Run all steps
-\i sql/v1.4-run-all-fixed.sql
+\i sql/v1.5.2-run-all.sql
 
 -- Verify
-\i tests/v1.4-step3-compare-v2.overlap.sql
+\i tests/v1.5-tests.sql
 ```
 
 Expected: PASS = true for all tests.
